index.html layout complete

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>index.html</h1>
+        <header>
+            <div class="top-header">
+                <h1>Find your film</h1>
+                <h4><a href="watchlist.html">My Watchlist</a></h4>
+            </div>
+        </header>
+        <form class="search">
+            <input type="text"/ >
+            <button type="submit">Search</button>
+        </form>
+        <main>
+            <div id="">
+                <!-- <i class="fa-solid fa-clapperboard"></i>
+                <p>Start exploring</p> -->
+            </div>
+        </main>
         <script src="index.js"></script>
     </body>
 </html>
