--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             </div>
         </header>
         <form class="search">
-            <input type="text"/ >
+            <div class="search-input">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" id="text-field"/ >
+            </div>
             <button type="submit">Search</button>
         </form>
-        <main>
-            <div id="">
-                <!-- <i class="fa-solid fa-clapperboard"></i>
-                <p>Start exploring</p> -->
+        <main class="blank">
+            <div id="empty">
+                <i class="fa-solid fa-clapperboard"></i>
+                <p>Start exploring</p>
             </div>
         </main>
         <script src="index.js"></script>
