finish search functionality, finish movie styling

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
             <button type="submit">Search</button>
         </form>
         <main id="main" class="blank">
-            <!-- <div id="empty">
+            <div id="empty">
                 <i class="fa-solid fa-clapperboard"></i>
                 <p>Start exploring</p>
-            </div> -->
+            </div>
+            <div id="no-results">
+                <p>Sorry, we can't find what you’re looking for. Please try another search.</p>
+            </div>
             <div id="results">
                 <div></div>
-                <p id="seemore" role="button">See more...</p>
+                <p id="seemore" style="display: none;" role="button">See more...</p>
             </div>
         </main>
         <script src="index.js"></script>
