--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="/css/global.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
         <header>
             <div class="top-header">
                 <h1>Find your film</h1>
-                <h4><a href="watchlist.html">My Watchlist</a></h4>
+                <h4><a href="/pages/watchlist.html">My Watchlist</a></h4>
             </div>
         </header>
         <form id="moviesearch" class="search">
