add footer and more styling

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <p id="seemore" style="display: none;" role="button">See more...</p>
             </div>
         </main>
+        <footer class="flex justifycenter">
+            <p>by jakob edgeworth <a target="_blank" href="https://github.com/coolnormal23/movie-watchlist">github</a></p>
+        </footer>
         <script type="module" src="./js/index.js"></script>
     </body>
 </html>
