--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -24,6 +24,9 @@
                 <div></div>
             </div>
         </main>
+        <footer class="flex justifycenter">
+            <p>by jakob edgeworth <a target="_blank" href="https://github.com/coolnormal23/movie-watchlist">github</a></p>
+        </footer>
         <script type="module" src="/js/watchlist.js"></script>
     </body>
 </html>
